Fixed compose email errors

--- a/client/views/app/stocktake/stocktake-ordering/ordering-status/email/email.html
+++ b/client/views/app/stocktake/stocktake-ordering/ordering-status/email/email.html
@@ -4,9 +4,8 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close btn btn-danger btn-sm close-modal-button">
+          <button type="button" class="close close-modal-button" aria-label="Close">
             <span aria-hidden="true">&times;</span>
-            <span class="sr-only">Discard</span>
           </button>
           <h4 class="modal-title">Compose mail</h4>
         </div>
