Fix email dialog size, order item editable

--- a/client/views/app/stocktake/stocktake-ordering/ordering-status/email/email.html
+++ b/client/views/app/stocktake/stocktake-ordering/ordering-status/email/email.html
@@ -1,7 +1,7 @@
 <template name="composeStocktakeOrderingEmail">
   <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="composeStocktakeOrderingEmail"
        aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close close-modal-button" aria-label="Close">
