--- a/client/views/app/stocktake/counting-view/stock-counting-list/counting-list-sortable/stock-items-list-sortable.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/counting-list-sortable/stock-items-list-sortable.html
@@ -1,4 +1,4 @@
-<template name="sortableStockItems">
+<template name="stockItemsListSortable">
   <ul class="list-group sortableStockItems">
     {{#each ingredientsList}}
       {{> stockCountingListItemEdit item=this stockTakeData=../stockTakeData}}
