--- a/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/stocktake-area-filter.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/stocktake-area-filter.html
@@ -1,4 +1,4 @@
-<template name="areaFilters">
+<template name="stocktakeAreaFilter">
   <div class="col-md-4 no-margin areaFilering">
     {{#each generalAreas}}
       {{#if ../stockTakeData.editableStockTake}}
