fixed stock modal list for add new ingredients in stocktake list

--- a/client/views/app/stock/modal-list/modal-list-stock-list.html
+++ b/client/views/app/stock/modal-list/modal-list-stock-list.html
@@ -6,7 +6,7 @@
           <span aria-hidden="true">&times;</span>
           <span class="sr-only">Close</span>
         </button>
-        <h4 class="modal-title" id="myModalLabel">Select Stocks</h4>
+        <h4 class="modal-title" id="stockslistModal">Select Stocks</h4>
       </div>
       <form class="form-horizontal" role="form" style="padding: 10px 20px">
         <div class="modal-body">
