--- a/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/area-item/area-item-edit/area-item-edit.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/area-item/area-item-edit/area-item-edit.html
@@ -1,4 +1,4 @@
-<template name="areaBoxEdit">
+<template name="areaItemEdit">
   <div class="areaBox">
   {{#if activeGeneralArea item._id}}
     <div class="box-wrapper pull-right" style="display: block;">
