--- a/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/area-item/area-item-view/area-item-view.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/area-item/area-item-view/area-item-view.html
@@ -1,4 +1,4 @@
-<template name="areaBox">
+<template name="areaItemView">
   <div class="areaBox">
     {{#if activeGeneralArea item._id}}
       <div class="box-wrapper pull-right" style="display: none;">
