--- a/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/stocktake-area-filter.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/stocktake-area-filter.html
@@ -2,14 +2,13 @@
   <div class="col-md-4 no-margin areaFilering">
     {{#each generalAreas}}
       {{#if ../stockTakeData.editableStockTake}}
-        {{> areaBoxEdit item=this itemClass="garea-filter" itemType="garea" stockTakeData=../stockTakeData}}
+        {{> areaItemEdit item=this itemClass="garea-filter" itemType="garea" stockTakeData=../stockTakeData}}
         <div class="collapse {{#if activeGeneralArea this._id}} in {{/if}}" id="{{this._id}}">
           <div class="well">
             {{#each specialAreas this._id}}
-              {{> areaBoxEdit item=this itemClass="sarea-filter" itemType="sarea" stockTakeData=../../stockTakeData}}
+              {{> areaItemEdit item=this itemClass="sarea-filter" itemType="sarea" stockTakeData=../../stockTakeData}}
             {{else}}
               No Special Areas
-              <br>
             {{/each}}
             <div class="button-wrapper" style="height: 30px">
               <a href="#" data-toggle="modal" class="btn btn-outline btn-primary col-md-12 no-margin addNewSpecialArea" style="margin-bottom: 20px">Add</a>
@@ -17,11 +16,11 @@
           </div>
         </div>
       {{else}}
-        {{> areaBox item=this itemClass="garea-filter" itemType="garea" stockTakeData=../stockTakeData}}
+        {{> areaItemView item=this itemClass="garea-filter" itemType="garea" stockTakeData=../stockTakeData}}
         <div class="collapse {{#if activeGeneralArea this._id}} in {{/if}}" id="{{this._id}}">
           <div class="well">
             {{#each specialAreas this._id}}
-              {{> areaBox item=this itemClass="sarea-filter" itemType="sarea" stockTakeData=../../stockTakeData}}
+              {{> areaItemView item=this itemClass="sarea-filter" itemType="sarea" stockTakeData=../../stockTakeData}}
             {{else}}
               No Special Areas
             {{/each}}
