--- a/client/views/app/stocktake/counting-view/counting-view-main.html
+++ b/client/views/app/stocktake/counting-view/counting-view-main.html
@@ -3,6 +3,6 @@
   {{> pageHeading title='Stocktake Counting' category="Stocktake List"}}
 
   <div class="wrapper wrapper-content">
-    {{> stockCounting stocktakeId=this.stocktakeId}}
+    {{> stockCountingList stocktakeId=this.stocktakeId}}
   </div>
 </template>
