--- a/client/views/app/stocktake/counting-view/stock-counting-list/stock-counting-list.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/stock-counting-list.html
@@ -1,4 +1,4 @@
-<template name="stockCounting">
+<template name="stockCountingList">
   <div class="row">
     <div class="col-lg-12">
       {{#if notTemplate}}
@@ -18,7 +18,7 @@
   </div>
   
   <div class="row">
-    {{> areaFilters stockTakeData=stockTakeCountingContext}}
+    {{> stocktakeAreaFilter stockTakeData=stockTakeCountingContext}}
     {{#if stockTakeCountingContext.activeSpecialArea}}
       <div class="col-md-8">
         {{#if notTemplate}}
@@ -31,12 +31,12 @@
           </ul>
         {{else}}
           {{#if stockTakeCountingContext.editableStockTake}}
-            {{> sortableStockItems ingredientsList=ingredientsList stockTakeData=stockTakeCountingContext}}
+            {{> stockItemsListSortable ingredientsList=ingredientsList stockTakeData=stockTakeCountingContext}}
             <a class="btn btn-block btn-default btn-outline addStock">Add stock items to this area</a>
           {{else}}
             <ul class="list-group">
               {{#each ingredientsList}}
-                {{> stockCountingListItem ingredient=this._id stockTakeData=stockTakeCountingContext}}
+                {{> stockCountingListItem ingredientId=this._id stockTakeData=stockTakeCountingContext}}
               {{else}}
                 No items on this list
               {{/each}}
@@ -50,18 +50,18 @@
   </div>
 
   {{#if stockTakeCountingContext.activeSpecialArea}}
-  <div class="modal fade" id="stocksListModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  <div class="modal fade" id="stocksListModal" tabindex="-1" role="dialog" aria-labelledby="stockslistModal"
        aria-hidden="true">
     {{> stocksModalList name="stockModal" modalStockListParams=modalStockListParams}}
   </div>
   {{/if}}
 
-  <div class="modal fade" id="addNewGeneralAreaModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  <div class="modal fade" id="addNewGeneralAreaModal" tabindex="-1" role="dialog" aria-labelledby="areasModal"
        aria-hidden="true">
     {{> newAreaModal name="general"}}
   </div>
 
-  <div class="modal fade" id="addNewSpecialAreaModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  <div class="modal fade" id="addNewSpecialAreaModal" tabindex="-1" role="dialog" aria-labelledby="areasModal"
        aria-hidden="true">
     {{> newAreaModal name="special" generalArea=stockTakeCountingContext.activeGeneralArea}}
   </div>
