--- a/client/views/app/stocktake/stocktake-ordering/ordering-status/ordering-status.html
+++ b/client/views/app/stocktake/stocktake-ordering/ordering-status/ordering-status.html
@@ -1,16 +1,20 @@
 <template name="orderingStatus">
-  <h2>
+  <h2 class="ordering-status">
     {{supplierName activeSupplierId}}
     <small class="text-info pull-right">
       {{#if deliveryDate receipt}}
         Expect delivery on
-        <a href="#" data-date-format="yyyy-mm-dd" data-date="{{dateFormat deliveryDate receipt}}"
-           class="expected-delivery-date-picker" data-pk="1">
-          {{timeFormattedWithDate deliveryDate receipt}}
-        </a>
+        <div class="btn-group expected-delivery-date-picker" role="group">
+          <input type="text" class="form-control date-picker-input"/>
+          <button type="button"
+                  class="btn btn-white date-picker-button">
+            <span class="glyphicon glyphicon-calendar"></span>
+            {{formatDate deliveryDate 'MMMM Do YYYY'}}
+          </button>
+        </div>
       {{/if}}
       {{#if receipt}}
-          <i class="fa fa-fw fa-check"></i> Status: {{orderSentDetails receipt}}
+        <i class="fa fa-fw fa-check"></i> Status: {{orderSentDetails receipt}}
       {{else}}
         <a class="btn btn-primary order-emailed-button">
           <i class="fa fa-envelope-o fa-fw fa-lg"></i>Send email
