--- a/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/stocktake-area-filter.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/stocktake-area-filter.html
@@ -2,11 +2,11 @@
   <div class="col-md-4 no-margin areaFilering">
     {{#each generalAreas}}
       {{#if ../stockTakeData.editableStockTake}}
-        {{> areaItemEdit item=this itemClass="garea-filter" itemType="garea" stockTakeData=../stockTakeData}}
+        {{> areaItemEdit item=this itemClass="garea-filter" stockTakeData=../stockTakeData}}
         <div class="collapse {{#if activeGeneralArea this._id}} in {{/if}}" id="{{this._id}}">
           <div class="well">
             {{#each specialAreas this._id}}
-              {{> areaItemEdit item=this itemClass="sarea-filter" itemType="sarea" stockTakeData=../../stockTakeData}}
+              {{> areaItemEdit item=this itemClass="sarea-filter" stockTakeData=../../stockTakeData}}
             {{else}}
               No Special Areas
             {{/each}}
@@ -16,11 +16,11 @@
           </div>
         </div>
       {{else}}
-        {{> areaItemView item=this itemClass="garea-filter" itemType="garea" stockTakeData=../stockTakeData}}
+        {{> areaItemView item=this itemClass="garea-filter" stockTakeData=../stockTakeData}}
         <div class="collapse {{#if activeGeneralArea this._id}} in {{/if}}" id="{{this._id}}">
           <div class="well">
             {{#each specialAreas this._id}}
-              {{> areaItemView item=this itemClass="sarea-filter" itemType="sarea" stockTakeData=../../stockTakeData}}
+              {{> areaItemView item=this itemClass="sarea-filter" stockTakeData=../../stockTakeData}}
             {{else}}
               No Special Areas
             {{/each}}
