small fixes, removed inline styles

--- a/client/views/app/stocktake/counting-view/counting-view-main.html
+++ b/client/views/app/stocktake/counting-view/counting-view-main.html
@@ -2,7 +2,7 @@
   <!-- Page heading -->
   {{> pageHeading title='Stocktake Counting' category="Stocktake List"}}
 
-  <div class="wrapper wrapper-content">
+  <div class="wrapper wrapper-content stocktake-counting">
     {{> stockCountingList stocktakeId=this.stocktakeId}}
   </div>
 </template>
