--- a/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/stocktake-area-filter.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/stocktake-area-filter.html
@@ -1,5 +1,5 @@
 <template name="stocktakeAreaFilter">
-  <div class="col-md-4 no-margin areaFilering">
+  <div class="col-md-4 no-margin filtering-area">
     {{#each generalAreas}}
       {{#if ../stockTakeData.editableStockTake}}
         {{> areaItemEdit item=this itemClass="garea-filter" stockTakeData=../stockTakeData}}
@@ -10,8 +10,8 @@
             {{else}}
               No Special Areas
             {{/each}}
-            <div class="button-wrapper" style="height: 30px">
-              <a href="#" data-toggle="modal" class="btn btn-outline btn-primary col-md-12 no-margin addNewSpecialArea" style="margin-bottom: 20px">Add</a>
+            <div class="button-wrapper">
+              <a href="#" data-toggle="modal" class="btn btn-outline btn-primary col-md-12 no-margin addNewSpecialArea">Add</a>
             </div>
           </div>
         </div>
