--- a/client/views/app/stocktake/stocktake-ordering/ordering-status/ordering-status.html
+++ b/client/views/app/stocktake/stocktake-ordering/ordering-status/ordering-status.html
@@ -2,16 +2,9 @@
   <h2 class="ordering-status">
     {{supplierName activeSupplierId}}
     <small class="text-info pull-right">
-      {{#if deliveryDate receipt}}
+      {{#if deliveryDate}}
         Expect delivery on
-        <div class="btn-group expected-delivery-date-picker" role="group">
-          <input type="text" class="form-control date-picker-input"/>
-          <button type="button"
-                  class="btn btn-white date-picker-button">
-            <span class="glyphicon glyphicon-calendar"></span>
-            {{formatDate deliveryDate 'MMMM Do YYYY'}}
-          </button>
-        </div>
+        {{> expectedDeliveryDatePicker deliveryDate=deliveryDate receipt=receipt}}
       {{/if}}
       {{#if receipt}}
         <i class="fa fa-fw fa-check"></i> Status: {{orderSentDetails receipt}}
