--- a/client/views/app/stocktake/counting-view/stock-counting-list/stock-counting-list.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/stock-counting-list.html
@@ -1,7 +1,7 @@
 <template name="stockCountingList">
   <div class="row">
     <div class="col-lg-12">
-      {{#if stockTakeMain.hasNoOrderReceipts}}
+      {{#if stockTakeMain.hasOrderReceipts}}
         <a class="btn btn-primary btn-sm pull-right" href="{{pathFor route='stocktakeOrdering' _id=stocktakeId}}">View Orders</a>
       {{else}}
         <a class="btn btn-primary btn-sm pull-right generateOrders">Save stocktake &amp; generate orders</a>
@@ -21,7 +21,7 @@
     {{> stocktakeAreaFilter stockTakeData=stockTakeCountingContext}}
     {{#if stockTakeCountingContext.activeSpecialArea}}
       <div class="col-md-8">
-        {{#if stockTakeMain.hasNoOrderReceipts}}
+        {{#if stockTakeMain.hasOrderReceipts}}
           <ul class="list-group">
             {{#each stocktakeList}}
               {{> stockCountingListItem stocktakeItem=this stockTakeData=stockTakeCountingContext}}
