small changes after @alonoslav code review

--- a/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/area-item/area-item-view/area-item-view.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/area-item/area-item-view/area-item-view.html
@@ -7,7 +7,7 @@
        aria-expanded="false" aria-controls="{{item._id}}">
       {{item.name}}
       <div class="progress progress-mini">
-        <div class="progress-bar" style="width: {{widthOfBar}}"></div>
+        {{> areasProgressBar itemId=item._id itemClass=itemClass stockTakeData=stockTakeData}}
       </div>
     </a>
   </div>
