--- a/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/area-item/area-item-edit/area-item-edit.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/stocktake-areas/stocktake-area-filter/area-item/area-item-edit/area-item-edit.html
@@ -17,7 +17,7 @@
        aria-expanded="false" aria-controls="{{item._id}}">
       <a href="#" class="area">{{item.name}}</a>
       <div class="progress progress-mini">
-        <div class="progress-bar" style="width: {{widthOfBar}}"></div>
+        {{> areasProgressBar itemId=item._id itemClass=itemClass stockTakeData=stockTakeData}}
       </div>
     </a>
   </div>
