--- a/client/views/app/sales-forecast/sales-prediction-header/sales-prediction-header.html
+++ b/client/views/app/sales-forecast/sales-prediction-header/sales-prediction-header.html
@@ -1,5 +1,5 @@
 <template name="salesPredictionHeader">
   <div class="title-action prediction-header">
-    {{> weekPicker year=state$currentDate.year week=state$currentDate.week onDateChanged=onDateChanged}}
+    {{> weekPicker date=currentDate onDateChanged=onDateChanged}}
   </div>
 </template>
