--- a/client/views/app/navigations/top-navbar/top-navbar.html
+++ b/client/views/app/navigations/top-navbar/top-navbar.html
@@ -3,6 +3,11 @@
     <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
       <div class="navbar-header">
         <a id="navbar-minimalize" class="minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
+        <form role="search" class="navbar-form-custom" action="">
+          <div class="form-group">
+            <input placeholder="Search for something..." class="form-control" name="top-search" id="top-search" type="text">
+          </div>
+        </form>
       </div>
       <ul class="nav navbar-top-links navbar-right">
         {{#if isInOrganization}}
