--- a/client/views/app/reports/reports-header/reports-header.html
+++ b/client/views/app/reports/reports-header/reports-header.html
@@ -1,5 +1,5 @@
 <template name="reportsHeader">
   <div class="title-action">
-    {{> weekPicker year=state$currentDate.year week=state$currentDate.week onDateChanged=onDateChanged}}
+    {{> weekPicker date=state$currentDate onDateChanged=onDateChanged}}
   </div>
 </template>
