--- a/client/views/app/notifications/text/notification-text.html
+++ b/client/views/app/notifications/text/notification-text.html
@@ -1,21 +1,21 @@
 <template name="notifiText">
-  <div class="feed-element" data-shift="{{state$notifi._id}}" style="border-bottom: none; padding-bottom: 0;">
+  <div class="feed-element" data-shift="{{notification._id}}" style="border-bottom: none; padding-bottom: 0;">
     <a href="#" class="pull-left">
-      <img alt="image" class="img-circle" src="{{profilePicture state$notifi.createdBy}}">
+      <img alt="image" class="img-circle" src="{{profilePicture notification.createdBy}}">
     </a>
 
     <div class="media-body ">
-      <small class="pull-right text-navy">{{timeFromNow state$notifi.createdOn}}</small>
-      {{{state$notifi.title}}}
+      <small class="pull-right text-navy">{{timeFromNow notification.createdOn}}</small>
+      {{{notification.title}}}
       <br>
       <small class="text-muted">
-        {{timeFormat state$notifi.createdOn}}
+        {{timeFormat notification.createdOn}}
       </small>
       <div>
-        {{{state$notifi.text}}}
+        {{{notification.text}}}
       </div>
 
-      {{#unless state$notifi.interactive}}
+      {{#unless notification.interactive}}
         <div class="mark-as-read text-warning">
           <button class="btn btn-xs btn-warning readNotification">Mark as read</button>
         </div>
