--- a/client/views/app/organizations/area-settings/add-user-popup/search-users-to-invite/search-user-info/search-user-info.html
+++ b/client/views/app/organizations/area-settings/add-user-popup/search-users-to-invite/search-user-info/search-user-info.html
@@ -2,7 +2,7 @@
   <div class="search-user-info-content">
     <img src="{{profilePicture this}}" alt="Profile image" class="user-photo-min"/>
     <span class="search-user-info-name">
-      <b>{{username this}}</b>
+      <b>{{{username this}}}</b>
       ({{emails.[0].address}})
     </span>
 
