--- a/client/views/app/organizations/area-settings/add-user-popup/search-users-to-invite/search-users-to-invite.html
+++ b/client/views/app/organizations/area-settings/add-user-popup/search-users-to-invite/search-users-to-invite.html
@@ -1,13 +1,13 @@
 <template name="searchUsersToInvite">
   <form class="add-user-to-area-form">
     <input type="text" class="form-control input-field" placeholder="e.g. john@gmail.com" name="addUserName" required="required">
-    {{#if state$isNewUserAdding}}
+    {{#if isNewUserAdding}}
       {{> inviteNewUser}}
     {{/if}}
   </form>
 
   <div>
-    {{#if state$displaySearchResults}}
+    {{#if displaySearchResults}}
       {{#if searchedUsers}}
         <div class="search-results">
           <b>Select to add</b>
