--- a/client/views/app/organizations/organization-flyout-header/organization-settings/organization-settings.html
+++ b/client/views/app/organizations/organization-flyout-header/organization-settings/organization-settings.html
@@ -21,6 +21,15 @@
             </span>
             Add/edit billing account
           </li>
+          <li class="list-group-item">
+            <a href="{{pathFor 'rolesSettings'}}">Roles</a>
+          </li>
+          <li class="list-group-item">
+            <a href="{{pathFor 'inactivityTimeoutSettings'}}">Inactivity Timeout</a>
+          </li>
+          <li class="list-group-item">
+            <a href="{{pathFor 'archivingSettings'}}">Locations/Areas archiving</a>
+          </li>
         </ul>
       </div>
     </div>
