Fixed searching users list

--- a/client/views/app/organizations/area-settings/add-user-popup/search-users-to-invite/search-users-to-invite.html
+++ b/client/views/app/organizations/area-settings/add-user-popup/search-users-to-invite/search-users-to-invite.html
@@ -1,6 +1,6 @@
 <template name="searchUsersToInvite">
   <form class="add-user-to-area-form">
-    <input type="text" class="form-control input-field" placeholder="e.g. john@gmail.com" name="addUserName" required="required">
+    <input type="text" class="form-control input-field add-user-name" placeholder="e.g. john@gmail.com" name="addUserName" required="required">
     {{#if isNewUserAdding}}
       {{> inviteNewUser}}
     {{/if}}
@@ -8,7 +8,7 @@
 
   <div>
     {{#if displaySearchResults}}
-      {{#if searchedUsers}}
+      {{#if searchedUsers.count}}
         <div class="search-results">
           <b>Select to add</b>
           <hr/>
