--- a/client/views/app/navigations/top-navbar/top-navbar.html
+++ b/client/views/app/navigations/top-navbar/top-navbar.html
@@ -30,6 +30,11 @@
             {{/if}}
           </a>
         </li>
+        <li>
+          <a href="{{pathFor 'taskList'}}">
+            <i class="fa fa-tasks"></i>
+          </a>
+        </li>
         {{#if isManager}}
           <li class="dropdown">
             <a class="" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
