Added functionality to the header

--- a/client/views/app/task-list/task-list.html
+++ b/client/views/app/task-list/task-list.html
@@ -1,3 +1,13 @@
 <template name="taskList">
+  {{> pageHeading title='Task List' name='taskList' onCreateTaskAction=onCreateTaskAction}}
 
+  {{#if isNewTaskCreating}}
+    {{> createNewTask}}
+  {{/if}}
+
+  {{#each tasks}}
+    <p>
+      {{title}}
+    </p>
+  {{/each}}
 </template>
