--- a/client/views/app/sales-forecast/weather-forecast/weather-forecast.html
+++ b/client/views/app/sales-forecast/weather-forecast/weather-forecast.html
@@ -1,5 +1,5 @@
 <template name="weatherForecast">
-  <td colspan="2" style="text-align: center;">
+  <td colspan="3" class="weather-forecast-cell">
     {{#if hasForecast}}
       <div class="weather-icon-wrapper">
         <i class='{{iconClass}}'></i>
