Added avarage daily accuracy

--- a/client/views/app/common/total-sales-row/total-sales-row.html
+++ b/client/views/app/common/total-sales-row/total-sales-row.html
@@ -5,7 +5,7 @@
       {{#with getTotalSales this}}
         <td>${{predicted}}</td>
         <td>${{actual}}</td>
-        <td>-</td>
+        <td>{{accuracy}}</td>
       {{/with}}
     {{/each}}
   </tr>
