--- a/client/views/app/sales-forecast/sales-forecast.html
+++ b/client/views/app/sales-forecast/sales-forecast.html
@@ -33,7 +33,7 @@
               {{#each week}}
                 <th>Forecast</th>
                 <th>Actual</th>
-                <th>acc,%</th>
+                <th>Fault,%</th>
               {{/each}}
             </tr>
             </thead>
