edit items in stocktake counting list

--- a/client/views/app/stocktake/counting-view/stock-counting-list/counting-list-sortable/stock-items-list-sortable.html
+++ b/client/views/app/stocktake/counting-view/stock-counting-list/counting-list-sortable/stock-items-list-sortable.html
@@ -1,7 +1,7 @@
 <template name="stockItemsListSortable">
   <ul class="list-group sortableStockItems">
     {{#each ingredientsList}}
-      {{> stockCountingListItemEdit item=this stockTakeData=../stockTakeData}}
+      {{> stockCountingListItem ingredient=this stockTakeData=../stockTakeData}}
     {{else}}
       No items on this list
     {{/each}}
