--- a/client/views/app/task-list/create-new-task/create-new-task.html
+++ b/client/views/app/task-list/create-new-task/create-new-task.html
@@ -1,7 +1,47 @@
 <template name="createNewTask">
-  <div class="col-xs-12">
-    <form>
-      <input type="text"/>
-    </form>
+  <div class="row create-new-task-container">
+    <div class="col-xs-12">
+      <form>
+        <div class="input-group">
+          <input type="text" class="form-control new-task-title" name="new-task-title" placeholder="Title">
+          <span class="input-group-btn open-datetimepicker">
+            <button class="btn btn-white datepicker" type="button">
+              <input type="button" class="datepicker-date"/>
+
+              <div class="new-task-date">
+                {{taskDate}}
+              </div>
+              <span class="fa fa-calendar"></span>
+            </button>
+          </span>
+        </div>
+        <div class="form-group">
+          <textarea name="new-task-description" cols="30" rows="10" class="form-control"
+                    placeholder="Description ..."></textarea>
+        </div>
+
+        <div class="form-group">
+          <div class="col-lg-2 col-sm-5 col-xs-12">
+            <div class="float-with-padding">
+              <label for="task-sharing" class="float-with-padding">Sharing:</label>
+              {{> ghostEditableSelect selected="private" values=taskSharingOptions onValueChanged=onSelectChange}}
+            </div>
+          </div>
+
+          <div class="col-lg-8 col-sm-4 col-xs-12">
+            {{#if displayUserSelector}}
+              <div class="user-selector">
+                {{> userSelector}}
+              </div>
+            {{/if}}
+          </div>
+
+          <div class="col-lg-2 col-sm-3 col-xs-12">
+            <button type="submit" class="btn btn-primary">Create</button>
+            <button type="button" class="btn btn-default close-create-new-task-container">Close</button>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
 </template>
