--- a/client/views/app/task-list/task-list.less
+++ b/client/views/app/task-list/task-list.less
@@ -10,8 +10,8 @@
     padding-right: 10px;
   }
 
-  position: fixed;
-  //top: 60px;
+  position: absolute;
+  top: 0;
   background-color: #fff;
   z-index: 30;
   border-bottom: 1px solid #CBD5DD;
@@ -23,6 +23,10 @@
 
       textarea {
         resize: none;
+      }
+
+      .user-selector-container {
+        margin-bottom: 10px;
       }
     }
 
