total price from sales

--- a/client/views/app/menu-items/menu-list-rank-report/menu-item/menu-item.html
+++ b/client/views/app/menu-items/menu-list-rank-report/menu-item/menu-item.html
@@ -4,6 +4,7 @@
   </td>
   <td>-</td>
   <td>-</td>
-  <td>{{itemSalesQuantity item._id}}</td>
+  <td>{{itemSalesQuantity}}</td>
   <td>{{item.salesPrice}}</td>
+  <td>{{itemTotalPriceFromSales}}</td>
 </template>
