--- a/client/views/app/task-list/task-list.less
+++ b/client/views/app/task-list/task-list.less
@@ -2,6 +2,14 @@
   h2 {
     margin-top: 0;
   }
+
+  .task-item {
+    margin-bottom: 10px;
+
+    .task-title.done {
+      text-decoration: line-through;
+    }
+  }
 }
 
 .create-new-task-container {
