prep item values

--- a/client/views/app/menu-items/menu-list-rank-report/menu-item/menu-item.html
+++ b/client/views/app/menu-items/menu-list-rank-report/menu-item/menu-item.html
@@ -5,6 +5,13 @@
   <td>-</td>
   <td>-</td>
   <td>{{itemSalesQuantity}}</td>
-  <td>{{item.salesPrice}}</td>
-  <td>{{itemTotalPriceFromSales}}</td>
+  <td>${{item.salesPrice}}</td>
+  <td>${{itemTotalPriceFromSales}}</td>
+  <td>{{prepItem}}</td>
+  <td></td>
+  <td></td>
+  <td></td>
+  <td></td>
+  <td></td>
+  <td></td>
 </template>
