Added dueDate displaying

--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -14,7 +14,9 @@
         </span>
       </div>
       <div class="col-xs-3">
-        {{dueDate}}
+        <span class="{{dueDateClass}}">
+          {{dueDate}}
+        </span>
       </div>
     </div>
   </div>
