--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -14,9 +14,12 @@
         </span>
       </div>
       <div class="col-xs-3">
-        <span class="{{dueDateClass}}">
-          {{dueDate}}
-        </span>
+        <h3 class="{{dueDateClass}}">
+          {{dueDateText}}
+        </h3>
+        {{#if isTodayOrTomorrow}}
+          <small>{{dateFormat dueDate}}</small>
+        {{/if}}
       </div>
     </div>
   </div>
