--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -11,6 +11,18 @@
           {{# if done}}
             ({{username completedBy}})
           {{/if}}
+
+          {{# if description}}
+            <a data-toggle="collapse" href="#{{_id}}" aria-expanded="false">
+              <i class="fa fa-comment"></i>
+            </a>
+
+            <div class="collapse" id="{{_id}}">
+              <div class="well">
+                {{description}}
+              </div>
+            </div>
+          {{/if}}
         </span>
       </div>
       <div class="col-xs-3">
