--- a/client/views/app/organizations/area-settings/area-settings.html
+++ b/client/views/app/organizations/area-settings/area-settings.html
@@ -14,7 +14,6 @@
 
     <div class="form-group">
       <label class="col-sm-2 control-label">Area Color</label>
-
       <div class="col-sm-10">
         {{> colorPicker onColorChange=onColorChange checkedColor=areaColor}}
       </div>
@@ -44,6 +43,16 @@
       {{#if state$addUser}}
         {{> addUserPopup areaId=area._id}}
       {{/if}}
+    {{/if}}
+
+    <br/>
+    <ul class="list-group" style="display: block;">
+      <li class="list-group-item">
+        <a href="{{pathFor 'posSettings'}}">POS / Menu Linking</a>
+      </li>
+    </ul>
+
+    {{#if isManager}}
       <button class="btn btn-danger col-xs-12 delete-area">Delete Area</button>
     {{/if}}
   </div>
