changed styles of due date text

--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -29,7 +29,7 @@
         <h3 class="{{dueDateClass}}">
           {{dueDateText}}
         </h3>
-        {{#if isTodayOrTomorrow}}
+        {{#if isTodayTomorrowOrOverdue}}
           <small>{{dateFormat dueDate}}</small>
         {{/if}}
       </div>
