changed styles of descriptions

--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -13,7 +13,7 @@
           {{/if}}
 
           {{# if description}}
-            <a data-toggle="collapse" href="#{{_id}}" aria-expanded="false">
+            <a data-toggle="collapse" href="#{{_id}}" aria-expanded="false" class="text-info">
               <i class="fa fa-comment"></i>
             </a>
 
