--- a/client/views/app/task-list/task-list.less
+++ b/client/views/app/task-list/task-list.less
@@ -18,6 +18,16 @@
     h3 {
       display: inline-block;
     }
+
+    .well {
+      margin-bottom: 0;
+      margin-top: 7px;
+      background-color: transparent;
+      border: 1px solid #1AB394;
+      border-radius: 0;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+    }
   }
 }
 
