--- a/client/views/app/task-list/task-item/task-item.html
+++ b/client/views/app/task-list/task-item/task-item.html
@@ -8,21 +8,11 @@
         <span class="task-title {{isDoneClass}}">
           {{title}}
 
-          {{# if done}}
+          {{#if done}}
             ({{username completedBy}})
           {{/if}}
 
-          {{# if description}}
-            <a data-toggle="collapse" href="#{{_id}}" aria-expanded="false" class="text-info">
-              <i class="fa fa-comment"></i>
-            </a>
-
-            <div class="collapse" id="{{_id}}">
-              <div class="well">
-                {{description}}
-              </div>
-            </div>
-          {{/if}}
+          {{> taskDescriptionAndReference}}
         </span>
       </div>
       <div class="col-xs-3">
