--- a/client/views/app/task-list/task-editor/task-editor.html
+++ b/client/views/app/task-list/task-editor/task-editor.html
@@ -1,9 +1,10 @@
-<template name="createNewTask">
+<template name="taskEditor">
   <div class="row create-new-task-container">
     <div class="col-xs-12">
       <form>
         <div class="input-group">
-          <input type="text" class="form-control new-task-title" name="new-task-title" placeholder="Title">
+          <input type="text" class="form-control new-task-title" name="new-task-title" placeholder="Title"
+                 value="{{task.title}}">
           <span class="input-group-btn open-datetimepicker">
             <button class="btn btn-white datepicker" type="button">
               <input type="button" class="datepicker-date"/>
@@ -17,7 +18,7 @@
         </div>
         <div class="form-group">
           <textarea name="new-task-description" cols="30" rows="10" class="form-control"
-                    placeholder="Description ..."></textarea>
+                    placeholder="Description ...">{{task.description}}</textarea>
         </div>
 
         {{#if displayUserSelector}}
@@ -32,16 +33,22 @@
 
         <div class="form-group">
           <div class="col-lg-6 col-sm-5 col-xs-12">
-              <label for="task-sharing" class="float-with-padding">Sharing:</label>
-              {{> ghostEditableSelect values=taskSharingOptions selected=selectedOption onValueChanged=onSelectChange}}
+            <label for="task-sharing" class="float-with-padding">Sharing:</label>
+            {{> ghostEditableSelect values=taskSharingOptions selected=selectedOption onValueChanged=onSelectChange}}
           </div>
 
           <div class="col-lg-3 col-sm-3 col-xs-12">
-            {{> referenceSelector}}
+            {{> referenceSelector task.reference}}
           </div>
 
           <div class="col-lg-3 col-sm-4 col-xs-12 text-right">
-            <button type="submit" class="btn btn-primary">Create</button>
+            <button type="submit" class="btn btn-primary">
+              {{#if task._id}}
+                Edit
+              {{else}}
+                Create
+              {{/if}}
+            </button>
             <button type="button" class="btn btn-default close-create-new-task-container">Close</button>
           </div>
         </div>
