--- a/client/views/app/organizations/common/edit-location-form/edit-location-form.html
+++ b/client/views/app/organizations/common/edit-location-form/edit-location-form.html
@@ -41,35 +41,10 @@
     {{> locationTimeSelect time=openingTime label="Opening Time" hoursName="openingHour" minutesName="openingMinutes"}}
     {{> locationTimeSelect time=closingTime label="Closing Time" hoursName="closingHour" minutesName="closingMinutes"}}
 
-    <!--todo: extract this stuff to separate component-->
-    {{#with locationDoc}}
-      <div class="panel panel-default">
-        <div class="panel-heading text-center"><b>POS Settings (optional)</b></div>
-        <div class="panel-body">
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Host</label>
+    <button type="submit" class="btn btn-primary btn-full-width show-pos-settings-btn">
+      POS Settings
+    </button><br/>
 
-            <div class="col-sm-10">
-              <input type="text" class="form-control" name="posHost" value="{{pos.host}}">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Key</label>
-
-            <div class="col-sm-10">
-              <input type="text" class="form-control" name="posKey" value="{{pos.key}}">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Secret</label>
-
-            <div class="col-sm-10">
-              <input type="text" class="form-control" name="posSecret" value="{{pos.secret}}">
-            </div>
-          </div>
-        </div>
-      </div>
-    {{/with}}
     <div class="form-group">
       <div class="btn-group col-xs-12">
         <button type="submit" class="btn btn-primary btn-half-width">{{submitCaption}}</button>
