Fixed problem with PIN lock token retaining

--- a/client/views/app/users/pin-lock/pin-lock.html
+++ b/client/views/app/users/pin-lock/pin-lock.html
@@ -4,6 +4,6 @@
     <span></span>
   </div>
   <div class="middle-box text-center lockscreen animated fadeInDown">
-    {{> pinCode backwardUrl=backwardUrl}}
+    {{> pinCode}}
   </div>
 </template>
