--- a/client/views/app/users/pin-lock/pin-code/pin-code.html
+++ b/client/views/app/users/pin-lock/pin-code/pin-code.html
@@ -1,7 +1,7 @@
 <template name="pinCode">
   <div>
-    {{> userBio userId=state$userId}}
-    <p>Enter your PIN to unlock </p>
+    {{> userBio userId=userId}}
+    <p>Enter your PIN to unlock</p>
 
     <form class="m-t" role="form">
       <div class="form-group">
