--- a/client/views/app/users/switch/switch-user/switch-user.html
+++ b/client/views/app/users/switch/switch-user/switch-user.html
@@ -9,9 +9,9 @@
           <h3>Someone else?</h3>
         </div>
       </div>
-      {{# each state$users}}
+      {{# each users}}
         <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 text-center">
-          {{> userBio userId=this._id onClick=switchUserOnClick}}
+          {{> userBio userId=_id onClick=switchUserOnClick}}
         </div>
       {{/ each}}
     </div>
