--- a/server/lib/notifications/templates/leave_request.handlebars
+++ b/server/lib/notifications/templates/leave_request.handlebars
@@ -24,14 +24,14 @@
 </style>
 
 <p>
-  <p>Hello, {{recipientName}}</p>
+<p>Hello, {{recipientName}}</p>
 
-  <p>I want to take time off from {{startDate}} to {{endDate}}</p>
+<p>I want to take time off from {{startDate}} to {{endDate}}</p>
 
-  <p>Please, review my <a type="link" href="{{leaveRequestLink}}">leave request</a>.</p>
+<p>Please, review my <a type="link" href="{{leaveRequestLink}}">leave request</a>.</p>
 
-  <p class="button-container">
-    <a href="{{approveLeaveRequestUrl}}" target="_blank" class="claim-button confirm-button">Confirm</a>
-    <a href="{{declineLeaveRequestUrl}}" target="_blank" class="claim-button reject-button">Reject</a>
-  </p>
+<p class="button-container">
+  <a href="{{approveLeaveRequestUrl}}" class="claim-button confirm-button">Confirm</a>
+  <a href="{{declineLeaveRequestUrl}}" class="claim-button reject-button">Reject</a>
+</p>
 </div>
